--- a/index.html
+++ b/index.html
@@ -8,9 +8,12 @@
 </head>
 <body>
     <input id="input" type="text" placeholder="country name">
-    <input id="uni" type="text" placeholder=".....university">
     <button id="search" >Search</button>
-    <button id="uni_search">unı search</button>
+    
+    <div id="last_search">
+        <!-- <input id="uni" type="text" placeholder=".....university">
+        <button id="uni_search">unı search</button> -->
+    </div>
     <div id="show">
     </div>
     <script src="data.js"></script>
